# drogon-realworld-example-app

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  Makefile  migration-plan.md  tutorial.md
.claude/skills/db-migration/: SKILL.md
.claude/skills/fix-realworld-bug/: SKILL.md
.claude/skills/generate-plan/: SKILL.md
.claude/skills/implement-endpoint/: SKILL.md
.claude/skills/write-unit-test/: SKILL.md
.githooks/: pre-commit  pre-push
openspec/: project.md
openspec/specs/article-favorites/: spec.md
openspec/specs/articles/: spec.md
openspec/specs/authentication/: spec.md
openspec/specs/comments/: spec.md
openspec/specs/follows/: spec.md
openspec/specs/users/: spec.md
scripts/: setup-hooks.sh
tests/: CMakeLists.txt  test_bcrypt.cc  test_input_validation.cc  test_jwtService.cc
tests/e2e/: test_api.sh
